[gd_scene load_steps=3 format=3 uid="uid://dmbtkim53oyxe"]

[ext_resource type="Theme" uid="uid://vlbrrce1aha4" path="res://assets/themes/default_theme.tres" id="1_e8nan"]
[ext_resource type="Script" path="res://assets/scripts/main_menu.gd" id="2_28qlu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_e8nan")
script = ExtResource("2_28qlu")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.682353, 0, 0.752941)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "Meandering Muck"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionsMenuBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4

[node name="MazeTypeBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer/OptionsMenuBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MazeTypeLabel" type="Label" parent="MarginContainer/VBoxContainer/OptionsMenuBox/MazeTypeBox"]
layout_mode = 2
size_flags_horizontal = 4
text = "Maze Type:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MazeTypeButton" type="OptionButton" parent="MarginContainer/VBoxContainer/OptionsMenuBox/MazeTypeBox"]
unique_name_in_owner = true
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "Random"
popup/item_0/id = 0
popup/item_1/text = "Semi-Random"
popup/item_1/id = 1
popup/item_2/text = "Static"
popup/item_2/id = 2

[node name="ButtonsVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 10

[node name="StartGameButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../QuitGameButton")
focus_neighbor_bottom = NodePath("../OptionsButton")
focus_next = NodePath("../OptionsButton")
focus_previous = NodePath("../QuitGameButton")
text = "Start Game"

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../StartGameButton")
focus_neighbor_bottom = NodePath("../QuitGameButton")
focus_next = NodePath("../QuitGameButton")
focus_previous = NodePath("../StartGameButton")
text = "Options"

[node name="QuitGameButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../OptionsButton")
focus_neighbor_bottom = NodePath("../StartGameButton")
focus_next = NodePath("../StartGameButton")
focus_previous = NodePath("../OptionsButton")
text = "Quit Game"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/OptionsMenuBox/MazeTypeBox/MazeTypeButton" to="." method="_on_maze_type_button_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsVBox/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsVBox/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsVBox/QuitGameButton" to="." method="_on_quit_game_button_pressed"]
